--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "commander": "6.2.1",
     "cors": "2.7.1",
     "cross-env": "^7.0.3",
+    "cypress": "^10.11.0",
     "express": "4.13.4",
     "express-jwt": "3.3.0",
     "express-session": "1.13.0",
