--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "test-next-nobuild": "NODE_ENV_NEXT_SERVER_ONLY=production REALWORLD_TEST_NEXT=true npm test -- --timeout 100000",
     "test-pg": "REALWORLD_PG=true npm test --",
     "test-pg-next": "npm run build-dev && REALWORLD_PG=true NODE_ENV_NEXT_SERVER_ONLY=production REALWORLD_TEST_NEXT=true npm test -- --timeout 100000",
-    "tsc": "tsc"
+    "tsc": "tsc",
+    "delete:reports": "rm cypress/results/* || true",
+    "combine:reports": "jrm cypress/results/combined-report.xml \"cypress/results/*.xml\"",
+    "prereport": "npm run delete:reports",
+    "report": "cypress run --reporter cypress-multi-reporters --reporter-options configFile=reporter-config.json",
+    "postreport": "npm run combine:reports"
   },
   "license": "ISC",
   "dependencies": {
@@ -63,6 +68,7 @@
     "@types/gtag.js": "0.0.7",
     "@types/node": "14.0.27",
     "@types/react": "17.0.38",
+    "cypress-multi-reporters": "^1.6.1",
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "7.2.0",
